# VideoToAsciiTerminal

./: .gitignore  CMakeLists.txt  README.md
processed-frames/ascii-art/: ascii_frame_100.txt  ascii_frame_10000.txt  ascii_frame_10001.txt  ascii_frame_10003.txt  ascii_frame_10005.txt  ascii_frame_10007.txt  ascii_frame_10009.txt  ascii_frame_1001.txt  ascii_frame_10012.txt  ascii_frame_10013.txt  ascii_frame_10016.txt  ascii_frame_10017.txt  ascii_frame_10020.txt  ascii_frame_10021.txt  ascii_frame_10024.txt  ascii_frame_10026.txt  ascii_frame_10028.txt  ascii_frame_1003.txt  ascii_frame_10030.txt  ascii_frame_10031.txt  ascii_frame_10034.txt  ascii_frame_10036.txt  ascii_frame_10037.txt  ascii_frame_10039.txt  ascii_frame_10042.txt  ascii_frame_10043.txt  ascii_frame_10046.txt  ascii_frame_10048.txt  ascii_frame_10049.txt  ascii_frame_1005.txt  ascii_frame_10052.txt  ascii_frame_10053.txt  ascii_frame_10056.txt  ascii_frame_10057.txt  ascii_frame_10060.txt  ascii_frame_10061.txt  ascii_frame_10063.txt  ascii_frame_10066.txt  ascii_frame_10067.txt  ascii_frame_10069.txt  (+6364 more)
src/: main.cpp  my_program  play.sh  preprocessing.sh  run.sh  test-driver.cpp  videotoascii.sh
